# streamlit-sales-suite

./: .dockerignore  .gitignore  1_🏠_Home.py  LICENSE  README.md  docker-compose.yml  pyproject.toml  tensorflow.dockerfile  training_model.py
data/: data_analysis.py  data_cleaning.py  data_scraping.py
images/: item_analysis.drawio  item_classifier.drawio
models/: architecture.py  config.py  inference_model.py  training_model.py
models/layers/: data_augmentation.py
pages/: 2_📊_Data_Analysis.py  3_🔎_Item_Classifier.py
project/: 1_🏠_Home.py  requirements.txt  training_model.py
project/data/: data_analysis.py
project/models/layers/: agc.py  gadamw.py  lr_scheduler.py
project/pages/: 2_📊_Data_analysis.py  3_🔎_Item_classifier.py
src/: 1_🏠_Home.py  data_acquisition.py  training_model.py
src/config/: config.py
src/data/: data_analysis.py  data_cleaning.py  data_scraping.py
src/models/: architecture.py  inference_model.py
src/models/layers/: agc.py  data_augmentation.py  gadamw.py  lr_scheduler.py
src/pages/: 2_📊_Data_analysis.py  3_🔎_Item_classifier.py
src/web_functions/: language_state.py
web/: 1_🏠_Home.py  1_🏠_Inicio.py
web/functions/: data_analysis.py  language_state.py
web/models/: config.py  inference_model.py
web/pages/: 2_📊_Analisis_de_datos.py  2_📊_Data_Analysis.py  3_🔎_Clasificador_de_articulos.py  3_🔎_Item_Classifier.py
web_functions/: language_state.py
